Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -1,1 +1,10 @@
-{"project":"Coco.project","configuration":"Debug","platforms":{"android":{},"iOS":{},"web":{}}}
+{
+    "project": "Coco.project",
+    "configuration": "Debug",
+    "platforms": {
+        "android": {},
+        "iOS": {},
+        "web": {}
+    },
+    "NoGITSymbolinkLink": true
+}
