Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -6,5 +6,8 @@
         "iOS": {},
         "web": {}
     },
-    "NoGITSymbolinkLink": true
+    "NoGITSymbolinkLink": true,
+    "ViewWidth": 480,
+    "ViewHeight": 320,
+    "ViewPixelRatio": 1
 }
