Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
     "project": "Coco.project",
-    "configuration": "Debug",
+    "configuration": "JavaScript++",
     "platforms": {
         "android": {},
         "iOS": {},
