Commit by Elias Politakis

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 #=== COCONUT2D_IGNORE_BEGIN ===#
 # Coconut2D Git Ignore for Coco.Project Symbolic Linked Folder (Junctions)
 
-#OS junk files
-[Tt] humbs.db
-*.DS_Store
+.DS_Store?
+.Trashes
+[Tt]humbs.db
+*.scc
+._*
+/native/Android/libs/
+/native/Android/obj/
+/native/iOS/bin/
+/native/Qt/bin/
 #=== COCONUT2D_IGNORE_ENG ===#
