Commit by Elias Politakis

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,2 @@
 [.ShellClassInfo]
-IconResource=C:\Users\YiamiYo\Documents\GitHub\IDE\Studio\Data Files\icons\Coconut2D_Folder.ico ,0
+IconResource=D:\mobileFX\Projects\Software\Coconut\IDE\Studio\Data Files\icons\Coconut2D_Folder.ico ,0
