Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -22,10 +22,10 @@
         "iOS": {
             "PROJECT_IOSMINVER": "5",
             "PROJECT_CPUSET": "armv7",
-            "PROJECT_CERTIFICATES": "EliasPolitakis.cer:AppleIncRootCertificate.cer:AppleWWDRCA.cer",
+            "PROJECT_CERTIFICATES": "ios_development.cer:AppleIncRootCertificate.cer:AppleWWDRCA.cer",
             "PROJECT_PRIVATE_KEY": "EliasPolitakis.key",
             "PROJECT_PRIVATE_KEY_PASSPHRASE": "puerre",
-            "PROJECT_PROVISION": "EliasPolitakis.mobileprovision"
+            "PROJECT_PROVISION": "EliasPolitakisDevelopment.mobileprovision"
         },
         "WEB": {}
     },
