Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -10,10 +10,10 @@
         "ViewPixelRatio": "1"
     },
     "CERTIFICATE_REQUEST": {
-        "company": "mobileFX",
-        "organization": "mobileFX",
-        "country": "US",
-        "password": "password"
+        "Company": "mobileFX",
+        "Organization": "mobileFX",
+        "Country": "US",
+        "Password": "password"
     },
     "PLATFORMS": {
         "ANDROID": {
