--- a/project.json
+++ b/project.json
@@ -17,7 +17,10 @@
     },
     "PLATFORMS": {
         "ANDROID": {
-            "ANDROID_PLATFORM": "android-10"
+            "ANDROID_PLATFORM": "android-10",
+            "minSdkVersion": "10",
+            "targetSdkVersion": "19",
+            "screenOrientation": "landscape"
         },
         "iOS": {
             "PROJECT_IOSMINVER": "5",
