--- a/project.json
+++ b/project.json
@@ -5,9 +5,9 @@
     "PROJECT_VERSION": "1.0",
     "CONFIGURATION": "Debug",
     "DEVICE_VIEWPORT": {
-        "ViewWidth": "480",
-        "ViewHeight": "320",
-        "ViewPixelRatio": "1"
+        "ViewWidth": 0,
+        "ViewHeight": 0,
+        "ViewPixelRatio": 0
     },
     "CERTIFICATE_REQUEST": {
         "Company": "mobileFX",
