Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -3,7 +3,7 @@
     "PROJECT_DISPLAY_NAME": "Coconut2D",
     "PROJECT_PACKAGE": "com.mobilefx.Coconut2D",
     "PROJECT_VERSION": "1.0",
-    "CONFIGURATION": "Debug",
+    "CONFIGURATION": "C++",
     "DEVICE_VIEWPORT": {
         "ViewWidth": 480,
         "ViewHeight": 320,
