Commit by Elias Politakis

--- a/project.json
+++ b/project.json
@@ -6,6 +6,8 @@
 	"PROJECT_VERSION_SHORT": "1.0",
 	"PROJECT_FRAMEWORKS": "org.coconut2d.sdk.html5;org.coconut2d.sdk.webgl;org.coconut2d.sdk.anim",
 	"CONFIGURATION": "Debug",
+	"DEBUG_HOST_IP": "$(LOCALHOST_IP)",
+	"DEBUG_HOST_PORT": "9999",
 	"TAGS":
 	{
 		"OG_COMPANY_ADDRESS": "52 Electras str",
@@ -172,9 +174,7 @@
 				"UIViewEdgeAntialiasing": false,
 				"UIApplicationExitsOnSuspend": true,
 				"UIInterfaceOrientation": "UIInterfaceOrientationLandscapeRight",
-				"UISupportedInterfaceOrientations1": "UIInterfaceOrientationLandscapeRight",
-				"UISupportedInterfaceOrientations2": "UIInterfaceOrientationLandscapeRight",
-				"UISupportedInterfaceOrientations_iPad": "UIInterfaceOrientationLandscapeRight",
+				"UIInterfaceOrientation_iPad": "UIInterfaceOrientationPortrait",
 				"UIPrerenderedIcon": true
 			},
 			"APP_ICONS":
