--- a/.SDK/DeviceWrappers/native/iOS/Info.plist
+++ b/.SDK/DeviceWrappers/native/iOS/Info.plist
@@ -64,13 +64,12 @@
 
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
-		<string>$(TARGETS.iOS.APP_SETTINGS.UISupportedInterfaceOrientations1)</string>
-		<string>$(TARGETS.iOS.APP_SETTINGS.UISupportedInterfaceOrientations2)</string>
+		<string>$(TARGETS.iOS.APP_SETTINGS.UIInterfaceOrientation)</string>
 	</array>
 
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
-		<string>$(TARGETS.iOS.APP_SETTINGS.UISupportedInterfaceOrientations_iPad)</string>
+		<string>$(TARGETS.iOS.APP_SETTINGS.UIInterfaceOrientation_iPad)</string>
 	</array>
 
     <!-- Resources -->
