Implemented CocoScript virtual functions like C++

--- a/project.json
+++ b/project.json
@@ -4,7 +4,7 @@
 	"PROJECT_PACKAGE": "com.mobilefx.Coconut2D",
 	"PROJECT_VERSION": "1.0.0",
 	"PROJECT_VERSION_SHORT": "1.0",
-	"PROJECT_FRAMEWORKS": "org.coconut2d.sdk.html5;org.coconut2d.sdk.webgl;org.coconut2d.sdk.anim",
+	"PROJECT_FRAMEWORKS": "org.coconut2d.sdk.html5;org.coconut2d.sdk.webgl;org.coconut2d.sdk.anim;org.coconut2d.sdk.net",
 	"CONFIGURATION": "Debug",
 	"DEBUG_HOST_IP": "$(LOCALHOST_IP)",
 	"DEBUG_HOST_PORT": "9999",
