Commit by Elias Politakis

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-﻿#=== COCONUT2D_IGNORE_BEGIN ===#
-# Coconut2D Git Ignore for Coco.Project Symbolic Linked Folder (Junctions)
-
-.DS_Store?
+﻿.DS_Store?
 .Trashes
 [Tt]humbs.db
 *.scc
 ._*
-#=== COCONUT2D_IGNORE_ENG ===#
+.targets/
+assets/fonts/
