--- a/project.json
+++ b/project.json
@@ -316,7 +316,7 @@
 		},
 		"node.js":
 		{
-			"TARGET_INPUT_SOURCES": "$(PROJECT_ROOT)/.server",
+			"TARGET_INPUT_SOURCES": "$(PROJECT_ROOT)/server",
 			"TARGET_ROOT": "$(PROJECT_ROOT)/.targets/web/node.js",
 			"TARGET_OBJ": "$(TARGET_ROOT)/obj",
 			"TARGET_ASSETS": "$(TARGET_ROOT)/assets",
