Commit by Elias Politakis

--- a/.SDK/DeviceWrappers/native/Android/AndroidManifest.xml
+++ b/.SDK/DeviceWrappers/native/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' standalone='no'?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="$(PROJECT_PACKAGE)"
-          android:installLocation="preferExternal"
+          package="$(PROJECT_PACKAGE)"          
+          android:installLocation="auto"
           android:versionCode="1"
           android:versionName="$(PROJECT_VERSION)">
 	<uses-sdk android:minSdkVersion="$(TARGETS.Android.APP_SETTINGS.MIN_SDK_VERSION)" android:targetSdkVersion="$(TARGETS.Android.APP_SETTINGS.TARGET_SDK_VERSION)" />
