--- a/.SDK/DeviceWrappers/native/Android/AndroidManifest.xml
+++ b/.SDK/DeviceWrappers/native/Android/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' standalone='no'?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="$(PROJECT_PACKAGE)"          
+          package="$(PROJECT_PACKAGE)"
           android:installLocation="auto"
           android:versionCode="1"
+          android:debuggable="true"
           android:versionName="$(PROJECT_VERSION)">
 	<uses-sdk android:minSdkVersion="$(TARGETS.Android.APP_SETTINGS.MIN_SDK_VERSION)" android:targetSdkVersion="$(TARGETS.Android.APP_SETTINGS.TARGET_SDK_VERSION)" />
 	<uses-feature android:glEsVersion="0x00020000" />
