Added Unicode support for Native targets

--- a/project.json
+++ b/project.json
@@ -344,7 +344,7 @@
 			"TARGET_OBJ": "$(TARGET_ROOT)/obj",
 			"TARGET_ASSETS": "$(TARGET_ROOT)/assets",
 			"TARGET_OUTPUT": "$(TARGET_ROOT)/$(PROJECT_NAME).exe",
-			"TARGET_CLEAN": "$(TARGET_ROOT)/$(PROJECT_NAME).exe;$(TARGET_ROOT)/obj;$(TARGET_ROOT)/assets",
+			"TARGET_CLEAN": "$(TARGET_ROOT)/*",
 			"TARGET_EXPORT": "native",
 			"TARGET_ADDITIONAL_FRAMEWORKS": null,
 			"TARGET_ADDITIONAL_NATIVE_SOURCES": "$(PATH_SDK_COMMON);$(TARGET_ROOT)/src",
