Commit by Elias Politakis

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ assets/fonts/
 *.avi
 *.rar
 Templates/Coco.project/
+com.vermantia.game.slots/
+CodeScopes.xml
+CodeSymbols.xml
+DebugSymbols.xml
+MemberLists.xml
+workspace.bin
